--- a/frontend/sass/app.sass
+++ b/frontend/sass/app.sass
@@ -39,3 +39,11 @@ body
     @include sprite-sprite(add, true)
   .btn-remove
     @include sprite-sprite(remove, true)
+
+.ds-logo
+  width: 320px
+  height: 132px
+  border: 2px solid #333
+  box-sizing: content-box
+  text-align: center
+  background: url(/static/img/ds-logo.png)
