Added Karma, added gulp task for testing,  added the necessary dependencies in package.json

--- a/frontend/sass/app.sass
+++ b/frontend/sass/app.sass
@@ -1,6 +1,7 @@
 @import compass
 @import compass/reset
 @import "sprite/*.png"
+@import "_module_1.sass"
 // following line will include auto-generated sprite classes
       e.g. for some-icon.png:
       .sprite-some-icon {
