libsass; update package.json;

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,6 +1,7 @@
 @import compass
 @import compass/reset
-@import "sprite/*.png"
+@import angular/angular-csp
+//@import "sprite/*.png"
 // following line will include auto-generated sprite classes
       e.g. for some-icon.png:
       .sprite-some-icon {
@@ -36,9 +37,9 @@ body
     color: red
     display: inline-block
   .btn-add
-    @include sprite-sprite(add, true)
+    //@include sprite-sprite(add, true)
   .btn-remove
-    @include sprite-sprite(remove, true)
+    //@include sprite-sprite(remove, true)
 
 .ds-logo
   width: 320px
