--- a/src/index.example.jade
+++ b/src/index.example.jade
@@ -3,7 +3,7 @@ html(lang="en")
   head
     meta(charset="utf-8")
     title DS AngularJS App
-    link(rel="stylesheet", href="/static/app.css")
+    link(rel="stylesheet", href="/static/app.css?#{VERSION}")
   body(ng-cloak, data-api-base-url="#{API_BASE_URL}")
 
     div(class="sprites-example")
