--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,6 +1,5 @@
 @import compass
 @import compass/reset
-@import angular/angular-csp
 @import sprites
 
 html, body
@@ -27,9 +26,9 @@ body
     color: red
     display: inline-block
   .btn-add
-    +sprite-icons(add, true)
+    +icons-sprite(add, true)
   .btn-remove
-    +sprite-icons(remove, true)
+    +icons-sprite(remove, true)
 
 .ds-logo
   width: 320px
