Wrap frontend-skeleton to yeoman generator

--- a/app/templates/src/index.example.pug
+++ b/app/templates/src/index.example.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang="en")
   head
     meta(charset="utf-8")
-    title DS AngularJS App
+    title AngularJS App
     link(rel="stylesheet", href="/static/app.css?#{VERSION}")
   body(ng-cloak, data-api-base-url="#{API_BASE_URL}")
 
