--- a/app/templates/src/index.html
+++ b/app/templates/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>DS AngularJS App</title>
+  <title>AngularJS App</title>
   <link rel="stylesheet" href="/static/app.css?<%=VERSION%>">
 </head>
 <body ng-cloak data-api-base-url="<%=API_BASE_URL%>">
