--- a/src/index.example.jade
+++ b/src/index.example.jade
@@ -4,7 +4,7 @@ html(lang="en")
     meta(charset="utf-8")
     title DS AngularJS App
     link(rel="stylesheet", href="/static/app.css?#{VERSION}")
-  body(ng-cloak, data-api-base-url="#{API_BASE_URL}")
+  body(ng-cloak, data-api-base-url="#{API_URL}")
 
     div(class="sprites-example")
       span(class="btn-add")
