--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -2,38 +2,4 @@
 @import compass/reset
 @import sprites
 
-html, body
-  width: 100%
-  height: 100%
-
-body
-  margin: 0
-  padding: 0
-  background: url(/static/img/example.png)
-  background-position: center
-  height: 100%
-
-.sprites-example
-  border-bottom: 1px solid #DDD
-  padding: 5px
-  &:before
-    content: 'sprites example:'
-    color: #696969
-    font-size: 0.8em
-    display: block
-    margin: 5px 0
-  span
-    color: red
-    display: inline-block
-  .btn-add
-    +icons-sprite(add, true)
-  .btn-remove
-    +icons-sprite(remove, true)
-
-.ds-logo
-  width: 320px
-  height: 132px
-  border: 2px solid #333
-  box-sizing: content-box
-  text-align: center
-  background: url(/static/img/ds-logo.png)
+@import 'ionic'
