env, sourcemaps, url resolving, fixes, fixes, fixes

--- a/src/index.pug
+++ b/src/index.pug
@@ -1,6 +1,7 @@
 doctype html
 html(lang="en")
   head
+    base(href="/")
     meta(charset="utf-8")
     title DS AngularJS App
   body(ng-cloak, data-api-base-url=`${locals.API_URL}`)
