--- a/emdyn_back/templates/users/user_detail.html
+++ b/emdyn_back/templates/users/user_detail.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
+{% load staticfiles i18n %}
 {% load static %}
 
-{% block title %}User: {{ object.username }}{% endblock %}
+{% block title %}{% trans "User" %}: {{ object.username }}{% endblock %}
 
 {% block content %}
 <div class="container">
@@ -10,8 +11,10 @@
     <div class="col-sm-12">
 
       <h2>{{ object.username }}</h2>
+     <p>email:  {{ object.email }}</p>
       {% if object.name %}
         <p>{{ object.name }}</p>
+
       {% endif %}
     </div>
   </div>
@@ -21,8 +24,8 @@
 <div class="row">
 
   <div class="col-sm-12">
-    <a class="btn btn-primary" href="{% url 'users:update' %}" role="button">My Info</a>
-    <a class="btn btn-primary" href="{% url 'account_email' %}" role="button">E-Mail</a>
+    <a class="btn btn-primary" href="{% url 'users:update' %}" role="button">{% trans "My Info" %}</a>
+    <a class="btn btn-primary" href="{% url 'account_email' %}" role="button">{% trans "Email" %}</a>
     <!-- Your Stuff: Custom user template urls -->
   </div>
 
