--- a/emdyn_back/templates/users/user_list.html
+++ b/emdyn_back/templates/users/user_list.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% load static i18n %}
-{% block title %}Members{% endblock %}
+{% block title %}{% trans "Members" %}{% endblock %}
 
 {% block content %}
 <div class="container">
-  <h2>Users</h2>
+  <h2>{% trans "Users" %}</h2>
 
   <div class="list-group">
     {% for user in user_list %}
