--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,6 +1,6 @@
 @import compass
 @import compass/reset
-@import sprites
+//@import sprites
 
 html, body
   width: 100%
@@ -13,7 +13,7 @@ body
   background-position: center
   height: 100%
 
-.sprites-example
+//.sprites-example
   border-bottom: 1px solid #DDD
   padding: 5px
   &:before
