copy last config from sedona-cms

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,8 @@
 body {
-  background: black;
-  background-image: svg-load('../img/icons/ic-create.svg', fill=#ff0000);
+  background: grey;
+}
+body:after {
+  content: 'postcss initialized'
 }
 
 
