--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,12 +1,7 @@
-@import "bootstrap";
+@import 'bootstrap';
+@import './layout';
 
-$bgcolor: red;
-
-
-body {
-  background: $bgcolor;
+html, body, #root {
+  height: 100%;
+  display: block;
 }
-body:after {
-  content: 'postcss initialized'
-}
-
