--- a/src/styles/_bootstrap.scss
+++ b/src/styles/_bootstrap.scss
@@ -1,21 +1,9 @@
-
-// // Required
-// // @import "bo";
-// @import "variables";
-// @import "mixins";
-// // / @import "variables";
-// // @import "./_variables.scss";
-// @import "functions";
-// @import "functions";
-// @import "mixins";
-// @import "reboot";
-// @import "type";
-
-@import "node_modules/bootstrap/scss/functions"; // Doesn't work
-@import "variables";
+@import "functions";
 @import "variables";
 @import "mixins";
 @import "root";
+@import "reboot";
+@import "type";
 @import "images";
 @import "code";
 @import "grid";
@@ -35,6 +23,17 @@
 @import "badge";
 @import "jumbotron";
 @import "alert";
+// SMELL
+//
+//     (   )
+//  (   ) (
+//   ) _   )
+//    ( \_
+//  _(_\ \)__
+// (____\___))
+//
+// https://github.com/webpack-contrib/sass-loader/issues/556
+@import "progress.scss";
 @import "media";
 @import "list-group";
 @import "close";
