--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,4 @@
+/* stylelint-disable number-leading-zero  */
 // Variables
 //
 // Variables should follow the `$component-state-property-size` formula for
