--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,9 @@
-@import 'bootstrap';
-@import './layout';
+@import "bootstrap";
+@import "./layout";
 
-html, body, #root {
+html,
+body,
+#root {
   height: 100%;
   display: block;
 }
