--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 /* stylelint-disable selector-pseudo-class-no-unknown  */
 @import "bootstrap";
 @import "./variables.scss";
+@import "../fonts/Lato/lato.css";
 
 :global {
   html,
@@ -9,7 +10,7 @@
     height: 100%;
     display: block;
     margin: 0;
-    font-family: sans-serif;
+    font-family: "Lato", sans-serif;
     font-size: 16px;
     font-weight: normal;
     color: $gray-800;
