--- a/src/app/pages/auth/login/login.scss
+++ b/src/app/pages/auth/login/login.scss
@@ -5,3 +5,25 @@
   max-width: 460px;
   margin: 0 auto;
 }
+
+.key-icon {
+  background-size: contain;
+  background-repeat: no-repeat;
+  display: inline-block;
+  background-image: svg-load('../../../img/icons/ic-key.svg');
+  width: 18px;
+  height: 18px;
+  margin-right: 10px;
+}
+
+.login-button {
+  height: 40px;
+  text-align: center;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  margin-top: 20px;
+  border: 1px solid #ccc;
+}
