--- a/src/app/pages/auth/login/login.scss
+++ b/src/app/pages/auth/login/login.scss
@@ -1,16 +1,19 @@
+@import "variables";
+
 .login {
   display: flex;
   flex-direction: column;
   align-items: center;
   max-width: 460px;
   margin: 0 auto;
+  padding-top: 40px;
 }
 
 .key-icon {
   background-size: contain;
   background-repeat: no-repeat;
   display: inline-block;
-  background-image: svg-load('../../../img/icons/ic-key.svg');
+  background-image: svg-load("../../../../img/icons/ic-key.svg");
   width: 18px;
   height: 18px;
   margin-right: 10px;
@@ -19,11 +22,11 @@
 .login-button {
   height: 40px;
   text-align: center;
-  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 16px;
   margin-top: 20px;
-  border: 1px solid #ccc;
+  border: 1px solid $gray-400;
+  width: 210px;
 }
