--- a/src/app/layouts/layout.scss
+++ b/src/app/layouts/layout.scss
@@ -12,7 +12,7 @@
 
 .header {
   height: $header-height;
-  background-color: #fff;
+  background-color: $white;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -22,5 +22,5 @@
   height: $footer-height;
   background-color: $primary;
   text-align: center;
-  color: #fff;
+  color: $white;
 }
