--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,7 +11,7 @@ $footer-height: 48px;
 
 // Color system
 
-$white:    #fff !default;
+$white:    #ffffff !default;
 $gray-100: #f8f9fa !default;
 $gray-200: #e9ecef !default;
 $gray-300: #dee2e6 !default;
@@ -21,7 +21,7 @@ $gray-600: #6c757d !default;
 $gray-700: #495057 !default;
 $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
-$black:    #000 !default;
+$black:    #000000 !default;
 
 $blue:    #007bff !default;
 $indigo:  #6610f2 !default;
